# af_xdp_testing

./: Cargo.toml  Makefile
crates/af_xdp/: Cargo.toml  build.rs
crates/af_xdp/.cargo/: config.toml
crates/af_xdp/src/: af_xdp.rs  lib.rs  udp.rs
crates/xdp-trace-ebpf/: Cargo.toml  Makefile
crates/xdp-trace-ebpf/.cargo/: config.toml
crates/xdp-trace-ebpf/src/: main.rs
src/: af_xdp.rs  lib.rs  metrics.rs
