[package]
name = "xdp-trace-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
network-types = "0.0.6"

# [build-dependencies]
# aya-build = { git = "https://github.com/aya-rs/aya", branch = "main" }

[[bin]]
name = "xdp-trace-ebpf"
path = "src/main.rs"

[lib]
name = "xdp_trace_ebpf"
path = "src/lib.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1


